1.4.3.1. Улучшения Collection API [#293898]